--- a/DataBot/DataBot.fsproj
+++ b/DataBot/DataBot.fsproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Data.fs" />
-    <Compile Include="Chart.fs" />
+    <Compile Include="Plot.fs" />
+    <Compile Include="Command.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
-    <PackageReference Include="XPlot.GoogleCharts" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.7.1" />
