--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="DataTests.fs" />
+    <Compile Include="GraphTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
