--- a/DataBot/DataBot.fsproj
+++ b/DataBot/DataBot.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MentionsRepository.fs" />
+    <Compile Include="Countries.fs" />
     <Compile Include="Data.fs" />
     <Compile Include="Command.fs" />
     <Compile Include="Graph.fs" />
