--- a/DataBot/DataBot.fsproj
+++ b/DataBot/DataBot.fsproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
+    <UseWindowsForms>false</UseWindowsForms>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.7.1" />
@@ -24,6 +24,7 @@
     <Compile Include="Program.fs" />
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="TweetinviAPI" Version="4.0.3" />
     <PackageReference Include="ZedGraph" Version="6.0.0-alpha0001" />
   </ItemGroup>
