Adding CosmosDB and Docker support

--- a/DataBot/DataBot.fsproj
+++ b/DataBot/DataBot.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.7.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="3.1.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
